kubernetes/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagenal-frontend
  labels:
    app: tagenal-frontend
spec:
  selector:
    matchLabels:
      app: tagenal-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: tagenal-frontend
    spec:
      containers:
        - name: tagenal-frontend
          image: frouioui/tagenal-frontend-service:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: web
              containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: tagenal-frontend-service
spec:
  type: ClusterIP
  selector:
    app: tagenal-frontend
  ports:
    - port: 8888
      targetPort: 8888
      name: web
